--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
@@ -54,7 +54,7 @@
 
                 <div class="row justify-content-center">
                         <div class="col">
-                            <table class="table table-striped">
+                            <table class="table table-striped" style="overflow-y: scroll; height: 70vh;">
                                 <thead>
                                 <tr>
                                     <th class="col-1">회사</th>
