--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-outgoing.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center mb-3" style="overflow: auto" id="inquireTableRow">
+                <div class="row justify-content-center mb-3" id="inquireTableRow">
                     <div class="col" style="overflow-y: scroll; height: 70vh;">
                         <table class="table text-center">
                             <thead>
@@ -106,7 +106,7 @@
                                 <th class="col-1">입고량</th>
                                 <th class="col-1">
                                     <button type="button" id="sendButton" class="btn btn-danger btn-sm"
-                                            style="visibility: visible;" onclick="clickEnrollButton()">등록
+                                            onclick="clickEnrollButton()">등록
                                     </button>
                                 </th>
                                 <th class="col-1">사내 재고</th>
@@ -120,32 +120,52 @@
                 </div>
 
                 <div class="row justify-content-center mb-3" style="visibility: hidden;" id="submitTableRow">
-                    <table class="table col-4">
-                        <thead>
-                        <tr>
-                            <th class="col-2">보그워너 품번</th>
-                            <th class="col-1">수량</th>
-                            <th class="col-1">
-                                <button type="button" id="submitButton" class="btn btn-danger btn-sm"
-                                        onclick="clickSubmitButton()">등록
-                                </button>
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody id="submitTbody">
-                        </tbody>
-                    </table>
+                        <table class="table col-4">
+                            <thead>
+                            <tr>
+                                <th class="col-1">보그워너 품번</th>
+                                <th class="col-1">수량</th>
+                                <th class="col-2">
+                                    <button type="button" id="checkButton" class="btn btn-success btn-sm"
+                                            onclick="clickCheckButton()">확인
+                                    </button>
+                                    <button type="button" id="returnButton" class="btn btn-warning btn-sm"
+                                            onclick="clickReturnButton()">뒤로
+                                    </button>
+                                    <button type="button" id="submitButton" class="btn btn-danger btn-sm"
+                                            onclick="clickSubmitButton()">등록
+                                    </button>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody id="submitTbody">
+                            </tbody>
+                        </table>
+                        <table class="table col-5">
+                            <thead>
+                            <tr>
+                                <th class="col-1">보그워너 품번</th>
+                                <th class="col-1">로트</th>
+                                <th class="col-1">적입량</th>
+                                <th class="col-1">수량</th>
+                                <th class="col-1">박스</th>
+                            </tr>
+                            </thead>
+                            <tbody id="checkTbody">
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="row justify-content-center mb-3" style="visibility: hidden;" id="resultTableRow">
-                    <table class="table col-6">
+                    <table class="table col-4">
                         <thead>
                         <tr>
-                            <th class="col-2">보그워너 품번</th>
-                            <th class="col-1">로트</th>
-                            <th class="col-1">적입량</th>
-                            <th class="col-1">수량</th>
-                            <th class="col-1">박스수</th>
+                            <th class="col">보그워너 품번</th>
+                            <th class="col">로트</th>
+                            <th class="col">적입량</th>
+                            <th class="col">수량</th>
+                            <th class="col">박스수</th>
                         </tr>
                         </thead>
                         <tbody id="resultTbody">
@@ -265,6 +285,34 @@
                         }
                     }
 
+                    async function clickCheckButton() {
+                        let tbody = document.getElementById("checkTbody");
+                        removeChildNode(tbody);
+                        const url = "/api/task/outgoing/check"
+                        let response = await fetch(url, {
+                            headers: {
+                                "Content-Type": "application/json",
+                            },
+                            method: "POST",
+                            body: JSON.stringify({
+                                partList : partList
+                            })
+                        });
+                        if (response.status == 200) {
+                            let data = await response.json();
+                            for (let i = 0; i < data.length; i++) {
+                                let temp = data[i];
+                                let tr = document.createElement("tr");
+                                tr.innerHTML = `<td>` + temp.bwCode + `</td>`
+                                    + `<td>` + temp.lot + `</td>`
+                                    + `<td>` + temp.loadAmount + `</td>`
+                                    + `<td>` + temp.quantity + `</td>`
+                                    + `<td>` + Math.ceil(temp.quantity / temp.loadAmount) + `</td>`;
+                                tbody.append(tr);
+                            }
+                        }
+                    }
+
                     async function enrollPart(element) {
                         let tr = element.parentNode.parentNode;
                         let tdList = tr.children;
@@ -288,8 +336,7 @@
 
                     function clickEnrollButton() {
                         if (partList.length != 0) {
-                            let tableRow = document.getElementById("inquireTableRow")
-                            removeAllNode(tableRow);
+                            displayNoneElement("inquireTableRow");
                             visibleElement("submitTableRow");
 
                             partList.sort(function (a, b) {
@@ -302,20 +349,41 @@
                             })
 
                             let tbody = document.getElementById("submitTbody");
-
+                            removeChildNode(tbody);
                             for (let i = 0; i < partList.length; i++) {
                                 let temp = partList[i];
                                 let tr = document.createElement("tr");
-
                                 tr.innerHTML = `<td>` + temp.bwCode + `</td>`
-                                    + `<td>` + temp.amount + `</td>`
+                                    + `<td onclick="changeAmount(${i})">` + temp.amount + `</td>`
                                     + `<td>` + '' + `</td>`;
                                 tbody.append(tr);
                             }
                         } else {
                             alert("등록된 자재가 없습니다. 등록해주세요")
                         }
+                    }
+                    async function changeAmount(index){
+                        let bwCode = partList[index].bwCode;
+                        const url = "/api/task/part-stock/inventory/" + bwCode;
+                        let response = await fetch(url);
+                        if (response.status == 200) {
+                            let data = await response.json();
+                            let message = "";
+                            for (let i = 0; i < data.length; i++) {
+                                let temp = data[i]
+                                message += `로트 : ${temp.lot}, 적입량 : ${temp.loadAmount}, 수량 : ${temp.stock}, 박스량 : ${temp.stock / temp.loadAmount}\n`
+                            }
+                            let amount = prompt(message, "")
+                            partList[index].amount = amount;
+                        }
+                        clickEnrollButton();
+                    }
 
+                    function clickReturnButton() {
+                        displayShowElement("inquireTableRow");
+                        invisibleElement("submitTableRow");
+                        let tbody = document.getElementById("checkTbody");
+                        removeChildNode(tbody);
                     }
 
                     async function clickSubmitButton() {
