--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-bom.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-bom.html
@@ -90,7 +90,7 @@
                                     let td = tdList[i];
                                     let input = td.firstChild;
                                     if (input != null) {
-                                        bomBwCode = input.value;
+                                        bomBwCode = input.value.toUpperCase();
                                     }
                                 }
 
